# component-detection

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  AssemblyKey.snk  CONTRIBUTING.md  ComponentDetection.sln  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile  README.md  StrongName.snk  StrongNamePublicKeys.cs  global.json  renovate.json
.azdo/: release.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  codecov.yml  copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: new_detector_template.md
.github/workflows/: build-release.yml  build.yml  codeql-analysis.yml  detector-version-bump-reminder.yml  gen-docs.yml  labeler.yml  main.yml  ossf-scorecard.yml  publish-release-snapshot.yml  release-drafter.yml  release.yml  smoke-test.yml  snapshot-publish.yml  snapshot-verify.yml  sync-fork.yml  sync-issues.yml  test-linux.yml  verify-snapshot.yml  zizmor.yml
.tours/: add-a-telemetry-record.tour  getting-started.tour
docs/: community-meetings.md  creating-a-new-detector.md  creating-a-new-service.md  detector-arguments.md  enable-default-off.md  environment-variables.md  feature-overview.md  go-detection.md  gradle-detection.md  issue-labeling.md  linux-scanner.md  maven-detection.md  pip-detection.md  renewing-secrets.md  running-verification-tests.md  update-syft.md
docs/detectors/: README.md  cocoapods.md  conan.md  conda.md  dockercompose.md  dockerfile.md  dotnet.md  go.md  gradle.md  helm.md  ivy.md  kubernetes.md  linux.md  maven.md  npm.md  nuget.md  paket.md  pip.md  pnpm.md  ruby.md  (+10 more)
npm-test/: package.json
src/: Directory.Build.props
test/: .editorconfig  Directory.Build.props
test/Microsoft.ComponentDetection.VerificationTests/resources/poetry/: pyproject.toml
test/Microsoft.ComponentDetection.VerificationTests/resources/rust/standard/: Cargo.toml
test/Microsoft.ComponentDetection.VerificationTests/resources/uv/: pyproject.toml
(+922 files in other folders)
