[project]
name = "component-detection"
version = "0.0.0"
description = "A test project"
authors = []
requires-python  = "==3.9.*"
dependencies = [
    "azure-identity==1.17.1",
    "flask>2,<4",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest-env>=1.1.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0"
]
